--- a/all.css
+++ b/all.css
@@ -11,7 +11,7 @@ body {
     background-color: linen;
     margin-top: 50px;
     border: 10px crimson dotted;
-    margin: 50px;
+    margin: 5%;
     padding: 20px;
     position: relative;
 }
